fix image wrapping

--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ a:hover, a:active {
 
 img {
 	max-width:100%;
+	display:block;
 }
 
 #content {
